<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/rowNumberTV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/colorWhite"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/playernameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/colorWhite"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_toRightOf="@id/rowNumberTV"
                android:layout_toLeftOf="@+id/sortButtonLL"/>

            <LinearLayout
                android:id="@+id/sortButtonLL"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/_5sdp"/>

                <ImageView
                    android:id="@+id/sortArrowIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_down_white_24dp"/>

            </LinearLayout>

        </RelativeLayout>

        <ListView
            android:id="@+id/playerAndScoreLV"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/_40sdp"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/emptyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_list_text"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>