<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentTop="true"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_12sdp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/dialogs_top"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/dialog_add"
            android:src="@drawable/ic_add_white_24dp"
            android:padding="@dimen/_5sdp"/>

        <FrameLayout
            android:id="@+id/dialog_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background_gray"
            android:padding="@dimen/_2sdp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_reject_white_24dp"/>

        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_6sdp">

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_score_message"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:textColor="@android:color/secondary_text_light"
            android:layout_marginBottom="@dimen/_6sdp"/>

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/scoreET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/score"
            android:maxLength="10"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_21sdp"
            android:layout_alignParentTop="true"
            android:background="@drawable/dialogs_bottom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"
            android:layout_alignParentBottom="true"
            android:background="@null"/>

        <Button
            android:id="@+id/dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_green_button"
            android:text="@string/ok"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</LinearLayout>